# python-project-83

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  build.sh  database.sql  docker-compose.yml  logging_config.yaml  pyproject.toml
.github/workflows/: run-flake8.yml
page_analyzer/: __init__.py  app.py  config.py  error_handlers.py  log_setup.py  logging_config.py  url_repository.py  utils.py
page_analyzer/db_connections/: connection_manager.py
page_analyzer/models/: url_repository.py
page_analyzer/repositories/: database_exceptions.py  url.py
page_analyzer/services/: parser.py  utils.py
page_analyzer/templates/: all_urls.html  base.html  home.html  page404.html  page500.html  proba.html  start_check.html  url_detail.html
page_analyzer/views/: url_views.py
